fix(list-group): ensure icons or avatar are not truncated

--- a/sass/_list-group-improvement.scss
+++ b/sass/_list-group-improvement.scss
@@ -12,7 +12,6 @@
     border-width: 0;
   }
 }
-
 .list-group-item-text {
   margin-bottom: 3px;
 
@@ -66,4 +65,5 @@
 
 .list-group-item-content {
   margin-left: 56px;
+  min-height: 52px;
 }
